feat: redirect to login when token expired.

--- a/app/web/templates/account_details.html
+++ b/app/web/templates/account_details.html
@@ -2,19 +2,8 @@
 <div class="container mx-auto mt-8 px-4">
     <div class="flex items-center justify-between mb-4">
         <h2 class="text-xl md:text-2xl font-bold">Ledger List</h2>
-        <button
-            hx-get="/accounts/{{.Account.ID}}/ledgers/new"
-            hx-target="#ledger-list"
-            hx-swap="beforeend"
-            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
-        >
-            Create Ledger
-        </button>
+        <button hx-get="/accounts/{{.Account.ID}}/ledgers/new" hx-target="#ledger-list" hx-swap="beforeend" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Create Ledger</button>
     </div>
-    <div
-        id="ledger-list"
-        hx-get="/api/accounts/{{.Account.ID}}/ledgers"
-        hx-trigger="load"
-    ></div>
+    <div id="ledger-list" hx-get="/api/accounts/{{.Account.ID}}/ledgers" hx-trigger="load"></div>
 </div>
 {{ end }}
