--- a/app/web/templates/index.html
+++ b/app/web/templates/index.html
@@ -1,18 +1,10 @@
-{{ define "index.html" }} {{ template "layout.html" . }} {{ end }} {{ define
-"nav" }}
+{{ define "index.html" }} {{ template "layout.html" . }} {{ end }} {{ define "nav" }}
 <nav class="bg-blue-500 p-4 text-white">
     <div class="container mx-auto px-4 flex justify-between items-center">
         <div class="text-2xl font-bold">Bookly</div>
         {{ if .IsAuthenticated }}
-        <button
-            hx-post="/api/logout"
-            hx-target="body"
-            class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded"
-        >
-            Logout
-        </button>
+        <button hx-post="/api/logout" hx-target="body" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">Logout</button>
         {{ end }}
     </div>
 </nav>
-{{ end }} {{ define "content" }} {{ if .IsAuthenticated }} {{ template
-"dashboard.html" . }} {{ else }} {{ template "login" . }} {{ end }} {{ end }}
+{{ end }} {{ define "content" }} {{ if .IsAuthenticated }} {{template "dashboard.html" . }} {{ else }} {{template "login" . }} {{ end }} {{ end }}
