fix: remove prefix 'api' from routers of web.

--- a/app/web/templates/account_details.html
+++ b/app/web/templates/account_details.html
@@ -3,5 +3,5 @@
     <h2 class="text-xl md:text-2xl font-bold text-text-primary">Ledger List</h2>
     <button hx-get="/accounts/{{.Account.ID}}/ledgers/new" hx-target="#ledger-list" hx-swap="beforeend" class="btn btn-primary">Create Ledger</button>
 </div>
-<div id="ledger-list" hx-get="/api/accounts/{{.Account.ID}}/ledgers" hx-trigger="load" class="bg-bg-secondary rounded-lg shadow-md"></div>
+<div id="ledger-list" hx-get="/accounts/{{.Account.ID}}/ledgers" hx-trigger="load" class="bg-bg-secondary rounded-lg shadow-md"></div>
 {{ end }}
