--- a/app/web/templates/dashboard.html
+++ b/app/web/templates/dashboard.html
@@ -5,7 +5,7 @@
             <h1 class="text-2xl font-bold text-text-primary">Account List</h1>
             <button hx-get="/accounts/new" hx-target="#account-list" hx-swap="beforeend" class="btn btn-primary duration-200">Create New Account</button>
         </div>
-        <div id="account-list" hx-get="/api/accounts" hx-trigger="load"></div>
+        <div id="account-list" hx-get="/accounts" hx-trigger="load"></div>
     </div>
     <div class="w-full md:w-1/2 px-4">
         <div id="account-details"></div>
