feat: now can update ledger.

--- a/app/web/templates/account_details.html
+++ b/app/web/templates/account_details.html
@@ -1,7 +1,7 @@
 {{ define "account_details.html" }}
 <div class="flex items-center justify-between mb-4">
-    <h2 class="text-xl md:text-2xl font-bold text-text-primary">Ledger List</h2>
-    <button hx-get="/accounts/{{.Account.ID}}/ledgers/new" hx-target="#create-ledger-modal" hx-swap="innerHTML" class="btn btn-primary">Create Ledger</button>
+    <h2 class="text-xl md:text-2xl font-bold text-text-primary">Ledgers</h2>
+    <button hx-get="/page/accounts/{{.Account.ID}}/ledgers" hx-target="#create-ledger-modal" hx-swap="innerHTML" class="btn btn-primary">New Ledger</button>
 </div>
 <div id="create-ledger-modal"></div>
 <div id="ledger-list" hx-get="/accounts/{{.Account.ID}}/ledgers" hx-trigger="load"></div>
