--- a/app/web/templates/index.html
+++ b/app/web/templates/index.html
@@ -23,8 +23,8 @@
             <div class="flex flex-col md:flex-row -mx-4">
                 <div class="w-full md:w-1/2 px-4 mb-8 md:mb-0">
                     <div class="flex justify-between items-center mb-4">
-                        <h1 class="text-2xl font-bold text-text-primary">Account List</h1>
-                        <button hx-get="/accounts/new" hx-target="#create-account-modal" hx-swap="innerHTML" class="btn btn-primary duration-200">Create New Account</button>
+                        <h1 class="text-xl font-bold text-text-primary">Accounts</h1>
+                        <button hx-get="/page/accounts" hx-target="#create-account-modal" hx-swap="innerHTML" class="btn btn-primary duration-200">New Account</button>
                     </div>
                     <div id="create-account-modal"></div>
                     <div id="account-list" hx-get="/accounts" hx-trigger="load"></div>
