--- a/app/web/templates/account_details.html
+++ b/app/web/templates/account_details.html
@@ -4,5 +4,5 @@
     <button hx-get="/page/accounts/{{.Account.ID}}/ledgers/create" hx-target="#create-ledger-modal" hx-swap="innerHTML" class="btn btn-primary">New Ledger</button>
 </div>
 <div id="create-ledger-modal"></div>
-<div id="ledger-list" hx-get="/page/accounts/{{.Account.ID}}/ledgers" hx-trigger="load"></div>
+<div id="ledger-list" hx-get="/page/accounts/{{.Account.ID}}/ledgers" hx-trigger="load, reloadLedgers from:body"></div>
 {{ end }}
